@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLOPT_FTP_USE_PRET (libcurl 7.20.0+).
+
         * Added setopt_string method to Curl objects to set arbitrary
           string options.
 
